--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "Gamer President",
-  "version": "0.0.3",
+  "name": "Anti-23Sonics",
+  "version": "0.0.1",
   "manifest_version": 2,
-  "description": "Replaces President with Gamer President for your lovely web experience.",
+  "description": "Replaces 23Sonics with CaiCai because we want him back.",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
